docs/grammar_grammar.txt
grammar             : rule *                                    ;

rule                : NAME ':' or_tokens * ';'                  ;

or_tokens           : and_tokens ( '|' and_tokens ) *           ; 
and_tokens          : cmpd_token ( '&' cmpd_token ) *           ;
cmpd_token          : '~' ? atom ( '*' | '+' | '?' ) ?          ;
atom                : sub_rule | STRING | rule_invoke | range   ;

sub_rule            : '(' or_tokens * ')'                       ; 
STRING              : "'" ~ "'" + "'"                           ;
rule_invoke         : NAME                                      ; 
RANGE               : . '..' .                                  ;

NAME                : a..z +                                    ;

LOOKAHEAD_SETS:

NAME        ->  NAME
COMMENT     ->  COMMENT
STRING      ->  STRING

END

TOKENS:
OR                      '|'
AND                     '&'
QMARK                   '?'
COMMA                   ','
PERIOD                  '.'
LPAREN                  '(' 
RPAREN                  ')'
LCURBRACK               '{'
RCURBRACK               '}'   
LBRACK                  '['
RBRACK                  ']'
SEMICOLON               ';'
COLON                   ':'
EQUALS                  '='
DEQUALS                 '==' 
ARROW                   '->' 
AST_REWRITE             '^(' 
QUOTE                   "'"
DQUOTE                  '"'
STAR                    '*'
PLUS                    '+'
DASH                    '-'
FSLASH                  '/'
BSLASH                  '\'
TILDE                   '~'
WILDCARD                '.'
RANGE                   '..'
NAME                    NON_PRE_DEF     ( ( 'a' .. 'z' ) | ( 'A' .. 'Z' ) ) *
NUMBER                  NON_PRE_DEF     ( '0' .. '9' ) * 
STRING                  NON_PRE_DEF     '"' . * '"'              
END
